Final verification for rest and rss

--- a/Projects/CrossOver/CrossOver.WCFService/Web.config
+++ b/Projects/CrossOver/CrossOver.WCFService/Web.config
@@ -29,7 +29,18 @@
         </endpoint>
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:64163/"/>
+            <add baseAddress="http://localhost:64163"/>
+          </baseAddresses>
+        </host>
+      </service>
+      <service name="CrossOver.WCFService.RssNewsFeedService">
+        <endpoint address="" behaviorConfiguration="rssBehavior"
+                  binding="webHttpBinding" bindingConfiguration=""
+                  contract="CrossOver.WCFService.IRssNewsFeedService">
+        </endpoint>
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:64163"/>
           </baseAddresses>
         </host>
       </service>
@@ -37,6 +48,9 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="restfulBehavior">
+          <webHttp helpEnabled="true" defaultOutgoingResponseFormat="Xml"/>
+        </behavior>
+        <behavior name="rssBehavior">
           <webHttp helpEnabled="true" defaultOutgoingResponseFormat="Xml"/>
         </behavior>
       </endpointBehaviors>
